rendered/envs/demo/echo-server/deployment-echo-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
    reloader.stakater.com/auto: "true"
  name: echo-server
spec:
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
        - image: jmalloc/echo-server
          name: echo-server
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 32Mi
