rendered/envs/demo/echo-server/ingressroute-echo.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
    external-dns.alpha.kubernetes.io/target: lb.demo.budd.ee
    kubernetes.io/ingress.class: traefik
  name: echo
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`echo.demo.budd.ee`)
      middlewares:
        - name: forwarded-headers
      priority: 10
      services:
        - name: echo-server
          port: 8080
          scheme: http
